Fixed casing and letter spacing errors

--- a/credits/assets/css/creditsStylesheet.css
+++ b/credits/assets/css/creditsStylesheet.css
@@ -217,8 +217,6 @@ p {
   position: relative;
   display: inline-block;
   background: #000;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
 }
 
 /* Hide pseudo-elements until hover */
